# multi-agent-orchestration-framework

./: .gitignore  .gitlab-ci.yml  .gitleaksignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.otel.yml  pyproject.toml
.claude/: settings.local.json
.claude/agent-memory/api-designer/: MEMORY.md
.claude/agents/: api-designer.md  api-documenter.md  backup-planner.md  best-practice-finder.md  changelog-writer.md  code-reviewer.md  competitor-researcher.md  debugger.md  deployment-troubleshooter.md  design-system-builder.md  gsd-executor.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  library-evaluator.md  migration-safety-agent.md  performance-optimizer.md
.claude/skills/env-audit/: SKILL.md
.claude/skills/phase-verify/: SKILL.md
.claude/skills/plan/: SKILL.md
.github/workflows/: cd.yml  ci.yml  mirror-to-gitlab.yml  phase3-gates.yml  release.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/02-differentiation/: PLAN-04b-SUMMARY.md  PLAN.md
.planning/phases/03-production-readiness/: 03-VERIFICATION.md  BACKUP-PLAN.md  PLAN.md  RESEARCH.md  TREE-OF-THOUGHTS-ANALYSIS.md
.planning/phases/03-production-readiness/research/: 01-server-api-layer.md  02-observability-telemetry.md  03-caching-memory.md  04-testing-quality.md  05-safety-guardrails.md  06-cost-management.md  ARCHITECTURE.md  EXTERNAL-RESEARCH-SYNTHESIS.md  FEATURES.md  IMPLEMENTATION-RESEARCH.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/phases/04-enterprise-scale/: BACKUP-PLAN.md  GSD-PLAN.md  PLAN.md  TREE-OF-THOUGHTS-ANALYSIS.md
.planning/phases/04-enterprise-scale/research/: 01-infrastructure-scalability.md  02-agent-iam-security.md  03-cost-routing-intelligence.md  04-memory-data-caching.md  05-testing-safety-guardrails.md  06-a2a-sdk-ecosystem-otel.md  07-competitive-analysis.md  08-github-repos-survey.md  10-notebooklm-synthesis.md  11-curated-tools-research.md  12-security-smoke-tests.md  13-iac-drift-management.md  14-matrix-testing-provenance.md  15-unified-devops-strategy.md
deploy/argocd/: applicationset.yaml
deploy/base/: kustomization.yaml  orchestra-agent.yaml
deploy/overlays/dev/: kustomization.yaml  patches.yaml
deploy/overlays/prod/: kustomization.yaml  patches.yaml
planning/: PHASE3-PLAN.md  PHASE4-TOPICS.md  RECONCILIATION.md  STRATEGIC-POSITIONING.md  architecture-refinements.md
research/: SUMMARY.md  a2a-protocol-and-governance.md  best-elements-synthesis.md  cost-routing-algorithms.md  evaluation-benchmarks.md  mcp-security.md  memory-architecture.md
src/orchestra/: __init__.py
src/orchestra/cache/: __init__.py  backends.py
src/orchestra/cli/: __init__.py  main.py
src/orchestra/core/: __init__.py  agent.py  compiled.py  context.py  edges.py  errors.py  graph.py  nodes.py  protocols.py  runner.py  state.py  types.py
src/orchestra/cost/: __init__.py  _default_prices.json  aggregator.py  budget.py  registry.py
src/orchestra/memory/: __init__.py  manager.py
src/orchestra/observability/: __init__.py  _otel_setup.py  _span_attributes.py  console.py  logging.py  metrics.py  tracing.py
src/orchestra/providers/: __init__.py  cached.py  http.py  ollama.py
src/orchestra/security/: __init__.py  circuit_breaker.py  guardrails.py  rate_limit.py  validators.py
src/orchestra/server/: __init__.py  app.py  config.py  dependencies.py  lifecycle.py  middleware.py  models.py
src/orchestra/server/routes/: __init__.py  graphs.py  health.py  runs.py  streams.py
src/orchestra/storage/: __init__.py  contracts.py  events.py  sqlite.py
src/orchestra/testing/: __init__.py  scripted.py
src/orchestra/tools/: __init__.py  base.py  mcp.py  registry.py
tests/: conftest.py  test_smoke.py
tests/chaos/: fault_injectors.py  test_provider_faults.py  test_server_chaos.py  test_storage_faults.py
tests/integration/: conftest.py  test_concurrency.py  test_examples.py  test_fastapi_endpoints.py  test_full_stack.py  test_reliability.py  test_sse_streaming.py
tests/load/: conftest.py  locustfile.py
tests/property/: __init__.py  test_graph_topologies.py
tests/security/: test_gvisor_interception.py  test_nats_e2ee.py  test_wasm_sandbox.py
tests/unit/: test_cache.py  test_circuit_breaker.py  test_core.py  test_cost.py  test_events.py  test_guardrails.py  test_guardrails_integration.py  test_mcp.py  test_memory.py  test_otel_metrics.py  test_otel_tracing.py  test_rate_limiter.py
